fix layout break when there are no content in filteredShows component

--- a/src/scss/base/_global.scss
+++ b/src/scss/base/_global.scss
@@ -24,7 +24,7 @@ body {
 }
 
 .App {
-	min-height: 100vw;
+	min-width: calc(100vw - 1.4rem);
 	max-width: 1440px;
 }
 
