--- a/src/scss/components/_navbar.scss
+++ b/src/scss/components/_navbar.scss
@@ -1,5 +1,6 @@
 .navbarContainer {
 	position: relative;
+	max-width: 100%;
 	@media (min-width: 1024px) {
 		position: absolute;
 		left: 2rem;
