--- a/src/scss/components/_recommended.scss
+++ b/src/scss/components/_recommended.scss
@@ -4,7 +4,7 @@
 
 	&__header {
 		@extend %header;
-		margin: 0 0 1rem;
+		margin: 2rem 0 1.2rem;
 	}
 
 	&__movies {
